--- a/styles.css
+++ b/styles.css
@@ -113,9 +113,22 @@ ul li.checked::before{
 }
 
 
-ul li span{
+.delete{
   position: absolute;
   right: 0;
+  top: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  color: #555;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.edit{
+  position: absolute;
+  right: 50px;
   top: 5px;
   width: 40px;
   height: 40px;
